# gl-test

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: Shader.cpp  Shader.h  glad.c  main.cpp  utils.cpp  utils.h
